fix overlay z-index

--- a/skins/default-vertical/css/styles.css
+++ b/skins/default-vertical/css/styles.css
@@ -210,7 +210,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
+    z-index: 2;
 }
 
 .heatmap-login {
